--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,10 @@ h3, .h3 {
     font-size: 1.75rem;
   }
 }
-
+.btn-pdf{
+  font-size:1.2em;
+  color:white;
+}
 h4, .h4 {
   font-size: calc(1.275rem + 0.3vw);
 }
