--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,11 @@ h3, .h3 {
 .btn-pdf{
   font-size:1.2em;
   color:white;
-  padding: 1em;
+  padding:15px 15px 15px 15px;
+  border-radius: 20px;
+  font-family: var(--bs-font-monospace);
+  
+  
 }
 h4, .h4 {
   font-size: calc(1.275rem + 0.3vw);
